2009-09-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/PointsToolbox/cube_five_tessellation.m:

	- CUBE_FIVE_TESSELLATION Tessellation in 5 tetrahedra of a cube
	with perpendicular diagonals on opposite sides of the
	cube (non-stackable).

2009-09-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/PointsToolbox/cube_stackable_tessellation.m:

	- CUBE_STACKABLE_TESSELLATION  Tessellation in tetrahedra of a
	cube that can be stacked in a regular mesh.

2009-09-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox for functions that deal with points.

	* Create directories for FileFormatToolbox and FiltersToolbox, and
	split existing functions accordingly. As more functions are added
	to the project, we'll need to organize them anyway.

2009-07-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* First public release to project Gerardus in Google Code of this
	Matlab Toolbox.

	- http://code.google.com/p/gerardus

	* Add README with help for functions in the Toolbox.

	* WriteMetaFile.h -> WriteRawFile.h:

	- Correct name, as "Meta" could refer to MetaImage, the format
	that includes both the mha header and the raw file.

	* dcm2metadata.m -> dcm2metaimage.m, im2metadata.m ->
	im2metaimage.m:
	
	Correct filenames and function names, because we are create
	MetaImage files, not "metadata".

	* Add LICENCE with text of the GPL v3, and corresponding copyright
	notices to all files.

2009-04-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add correct_light_blobs_in_microscope_mosaic.m:

	- CORRECT_LIGHT_BLOBS_IN_MICROSCOPE_MOSAIC Correct the colour blob
	created by the microscope's light in each tile of a mosaic,
	e.g. for histology.

2009-04-02  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add dcm2metadata.m:

	- DCM2METADATA  Read a batch of DICOM files, collate them and save
	as a single metadata volume (one .mha and one .raw file).

	* Add matlab2vox_seg3d.m:
